rough index page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,84 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	
+	<title>Home | Sta-Sound</title>
+<!-- Stylesheets -->	
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="960gs.css" type="text/css">
+<!-- TypeKit -->	
+	<script type="text/javascript" src="//use.typekit.net/vfd8tfq.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	
 </head>
 <body>
+<!-- HEADER -->
+	<div class="wrapper">	
+		<div id="header">	
+			<div class="logo">
+				<a href="index.html"><img src="images/sslogo.png" onmouseover="this.src='images/sslogo-hover.png'" onmouseout="this.src='images/sslogo.png'" /></a>
+			</div>
+			<div class="headerinfo address">
+				<p>
+					4301 Will Rogers Parkway, Suite 1000<br>
+					Oklahoma City, OK 73108
+				</p>
+			</div>
+			<div class="headerinfo phone">
+				<p>
+					toll free: (877) 399-7545<br>
+					email: <a href="mailto:sales@stasound.com">sales@stasound.com</a>
+				</p>
+			</div>
+			
+	<div class="clear"></div>
+		
+		</div><!--header-->
+<!-- NAV -->	
+		<div class="nav">
+			<div class="navblock">
+				<p>
+					Superior Products for 
+					<a href="canine.html" class="navlink">DOGS</a> |
+					<a href="feline.html" class="navlink">CATS</a> |
+					<a href="equine.html" class="navlink">HORSES</a> |
+					<a href="fix-a-stride" class="navlink">LIVESTOCK SHOW ANIMALS</a>
+				</p>
+			</div><!--navblock-->
+		</div><!--nav-->
+
+<!-- MAINCONTENT -->
 	
-	
-	
+		<div class="shadowtop"></div>
+		
+		<div id="maincontent">
+			<div class="contentblock">
+				<div class="tileblock">	
+					<a href="canine.html"><img src="images/tiledog.jpg" onmouseover="this.src='images/tiledog-hover.jpg'" onmouseout="this.src='images/tiledog.jpg'" /></a>
+					<a href="feline.html"><img src="images/tilecat.jpg" onmouseover="this.src='images/tilecat-hover.jpg'" onmouseout="this.src='images/tilecat.jpg'" /></a>
+					<a href="equine.html"><img src="images/tilehorse.jpg" onmouseover="this.src='images/tilehorse-hover.jpg'" onmouseout="this.src='images/tilehorse.jpg'" /></a>
+					<a href="fix-a-stride.html"><img src="images/tilecow.jpg" onmouseover="this.src='images/tilecow-hover.jpg'" onmouseout="this.src='images/tilecow.jpg'" /></a>
+				</div><!--tileblock-->
+<div class="clear"></div>
+			</div><!--contentblock-->
+		</div><!--maincontent-->
+		
+		<div class="shadowbottom"></div>
+<div class="push"></div>
+	</div><!-- wrapper -->	
+
+<!-- FOOTER -->
+	<div id="footer">
+		<div class="footerblock">
+			<div class="footerinfo footercontact">
+				<p>
+					4301 Will Rogers Parkway, Suite 1000<br>
+					Oklahoma City, OK 73108<br>
+					toll free: (877) 399-7545<br>
+					email: <a href="mailto:sales@stasound.com">sales@stasound.com</a>
+				</p>
+			</div><!--footerinfo-->
+		</div><!--footerblock-->
+	</div><!--footer-->
+
 </body>
 </html>
