major update: canine page & canine-joint-supplement prepped as templates

--- a/equine.html
+++ b/equine.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Equine | Sta-Sound</title>
+	<title>Equine Products | Sta-Sound</title>
 <!-- Stylesheets -->	
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="960gs.css" type="text/css">
