--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 <!-- HEADER -->
 	<div class="wrapper">	
 		<div id="header">	
-			<div class="logo">
-				<a href="index.html" /></a>
-			</div>
+			<a href="index.html" />
+				<div class="logo">
+					
+				</div>
+			</a>
 			
-		
-						
 <div class="clear"></div>
 		
 		</div><!--header-->
+
 <!-- NAV -->	
 		<div class="nav">
 			<div class="navblock">
@@ -63,9 +64,9 @@
 		</div><!--maincontent-->
 		
 		<div class="shadowbottom"></div>
-		
-		<div class="stanaturalblock">
-			<a href="http://stanatural.com">
+
+<!--STA-NATURAL BLOCK-->		
+		<a href="http://stanatural.com">
 				<p class="promotional">
 					<img src="images/website/snlogo.png" onmouseover="this.src='images/website/snlogo-hover.png'" onmouseout="this.src='images/website/snlogo.png'" />Looking for products for humans? <br> Click here to shop for herbal supplements, total meal replacements, coffee, and more!
 				</p>
