--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
 		<div class="shadowbottom"></div>
 
 <!--STA-NATURAL BLOCK-->		
-		<a href="http://stanatural.com">
-				<p class="promotional">
-					<img src="images/website/snlogo.png" onmouseover="this.src='images/website/snlogo-hover.png'" onmouseout="this.src='images/website/snlogo.png'" />Looking for products for humans? <br> Click here to shop for herbal supplements, total meal replacements, coffee, and more!
-				</p>
-			</a>	
+			<div class="promotional">
+				<a href="http://stanatural.com">
+				<img src="images/website/snlogo.png" onmouseover="this.src='images/website/snlogo-hover.png'" onmouseout="this.src='images/website/snlogo.png'" />Looking for products for humans? <br> Click here to shop for herbal supplements, total meal replacements, coffee, and more!
+				</a>
 		</div>
 		
 <div class="push"></div>
