--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 				<div class="shopblock">
 					<img src="images/products/Fly-B-Gone-Livestock.png">
 					<h3>Fly-B-Gone</h3>
-					<p class="subtitle">Fly Spray for Horses</p>
+					<p class="subtitle">Fly Spray for Livestock</p>
 					<p class="productdesc">Say goodbye to flies, ticks, gnats, fleas & mosquitos! This natural spray is safe and effective. Veternarian approved!</p>
 					
 					<div class="price">
