--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
 		<div id="maincontent">
 
-<!-- ***** DOGS ***** -->
-<!-- ***** DOGS ***** -->
-<!-- ***** DOGS ***** -->
+<!--
+DOGS	
+-->
 
 			<div class="contentblock">
 				
@@ -197,9 +197,9 @@
 <!--CLEAR--><div class="clear"></div>
 
 <hr><br>
-<!-- ***** CATS ***** -->
-<!-- ***** CATS ***** -->
-<!-- ***** CATS ***** -->
+<!-- 
+CATS
+-->
 
 
 				<div class="pageblock">	
@@ -317,9 +317,9 @@
 
 <hr><br>
 
-<!-- ***** HORSES ***** -->
-<!-- ***** HORSES ***** -->
-<!-- ***** HORSES ***** -->
+<!-- 
+HORSES
+-->
 
 				<div class="pageblock">	
 					<h1 class="pagetitle"><a id="horsesection">Sta-Sound Products for Horses</a></h1>
@@ -448,9 +448,9 @@
 
 <hr><br>
 
-<!-- ***** LIVESTOCK ***** -->
-<!-- ***** LIVESTOCK ***** -->
-<!-- ***** LIVESTOCK ***** -->	
+<!-- 
+LIVESTOCK 	
+-->	
 
 				<div class="pageblock">	
 					<h1 class="pagetitle"><a id="livestocksection">Sta-Sound Products for Livestock Show Animals</a></h1>
