animal category pages

--- a/canine.html
+++ b/canine.html
@@ -50,7 +50,7 @@
 					<a href="canine.html" class="navlink">DOGS</a> |
 					<a href="feline.html" class="navlink">CATS</a> |
 					<a href="equine.html" class="navlink">HORSES</a> |
-					<a href="fix-a-stride" class="navlink">LIVESTOCK SHOW ANIMALS</a>
+					<a href="fix-a-stride.html" class="navlink">LIVESTOCK SHOW ANIMALS</a>
 				</p>
 			</div><!--navblock-->
 		</div>
@@ -94,7 +94,7 @@
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="dog-b-clean"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -156,7 +156,7 @@
 
 <!-- CANINE JOINT SUPPLEMENT -->
 				<div class="shopblock">
-					<img src="images/products/Canine-Joint-Supplement.png">
+					<img src="images/products/Canine-Joint-Supplement.png" class="bucket">
 					<h3>Sta-Sound</h3>
 					<p class="subtitle">Canine Joint Supplement</p>
 					<p class="productdesc">Dogs LOVE our patented beef joint supplement! Improves and maintains normal joint function. Veternarian approved!</p>
