--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ DOGS
 
 <!-- CANINE JOINT SUPPLEMENT -->
 				<div class="shopblock">
-					<img src="images/products/Canine-Joint-Supplement.png">
+					<img src="images/products/Canine-Joint-Supplement.png" class="bucket">
 					<h3>Sta-Sound</h3>
 					<p class="subtitle">Canine Joint Supplement</p>
 					<p class="productdesc">Dogs LOVE our patented beef joint supplement! Improves and maintains normal joint function. Veterinarian approved!</p>
@@ -294,7 +294,7 @@ CATS
 
 <!-- FELINE JOINT SUPPLEMENT -->
 				<div class="shopblock">
-					<img src="images/products/Feline-Joint-Supplement.png">
+					<img src="images/products/Feline-Joint-Supplement.png" class="bucket">
 					<h3>Sta-Sound</h3>
 					<p class="subtitle">Feline Joint Supplement</p>
 					<p class="productdesc">It's so easy to give, and cats love it! Improves and maintains normal joint function. Veterinarian approved!</p>
@@ -337,7 +337,7 @@ HORSES
 					<img src="images/products/Fly-B-Gone-Horse.png">
 					<h3>Fly-B-Gone</h3>
 					<p class="subtitle">Fly Spray for Horses</p>
-					<p class="productdesc">Say goodbye to flies, ticks, gnats, fleas & mosquitoes! This natural spray is safe and effective. Veterinarian approved!</p>
+					<p class="productdesc">Say goodbye to flies, ticks, gnats, fleas and mosquitoes! This natural spray is safe and effective. Veterinarian approved!</p>
 					
 					<div class="price">
 						$15.95
@@ -468,7 +468,7 @@ LIVESTOCK
 					<img src="images/products/Fly-B-Gone-Livestock.png">
 					<h3>Fly-B-Gone</h3>
 					<p class="subtitle">Fly Spray for Livestock</p>
-					<p class="productdesc">Say goodbye to flies, ticks, gnats, fleas & mosquitoes! This natural spray is safe and effective. Veterinarian approved!</p>
+					<p class="productdesc">Say goodbye to flies, ticks, gnats, fleas and mosquitoes! This natural spray is safe and effective. Veterinarian approved!</p>
 					
 					<div class="price">
 						$15.95
