--- a/feline.html
+++ b/feline.html
@@ -235,5 +235,7 @@
 	</div>
 <!-- FOOTER -->
 
+<!--LIVERELOAD-->
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
