--- a/fixastridetx.html
+++ b/fixastridetx.html
@@ -206,5 +206,8 @@
 		</div> <!-- contactwrapper -->
 	
 	<div class="push"></div>
+
+<!--LIVERELOAD-->
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
