--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 	</script>
 <!--GoogleAnalytics-->	
 
+
+
 </head>
 <body>
 <!-- HEADER -->
@@ -594,5 +596,7 @@ LIVESTOCK
 	</div>
 <!-- FOOTER -->
 
+<!--LIVERELOAD-->
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
