Added individual product pages (templates only)

--- a/dog-b-clean.html
+++ b/dog-b-clean.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Canine Products | Sta-Sound</title>
+	<title>Dog-B-Clean | Sta-Sound</title>
 <!-- Stylesheets -->	
 	<link href="style.css" rel="stylesheet" type="text/css">
 <!-- TypeKit -->	
@@ -44,13 +44,14 @@
 		<div id="maincontent">
 			<div class="contentblock">
 				<div class="moreblock">	
-					<h1 class="pagetitle">Sta-Sound Canine Joint Supplement</h1>
+					<h1 class="pagetitle">Dog-B-Clean</h1>
 					<div class="moreimg">
-						<img src="images/products/Canine-Joint-Supplement.png" class="product moreproduct">
-						<img src="images/animals/sqdog-shaggy-best.jpg" class="animalsq">
+						<img src="images/products/dog-b-clean.png" class="product moreproduct skinnyproduct">
+						<img src="images/animals/sqdog-brown-happy.jpg" class="animalsq">
 					</div><!--moreimg-->
-<div class="clear"></div>									
-					<p class="subtitle submore">Improves and maintains normal joint function!</p>
+					<br>
+<div class="clear"></div>								
+					<p class="subtitle submore">Natural Waterless Shampoo</p>
 					
 <!-- *** CALL TO ORDER *** -->
 <div class="calltoorder">To Order Call Toll-Free: <a href="tel:18773997545">1 (877) 399-7545</a></div> <br>
@@ -77,6 +78,8 @@
 						</div>
 					</div><!--moreprice-->
 					
+					<br><br>
+
 					<ul class="morelist">
 						<li>Veterinarian Approved!</li>
 						<li>Real Beef</li>
