--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>Animal Products | Sta-Sound</title>
 <!-- Stylesheets -->	
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="960gs.css" type="text/css">
 <!-- TypeKit -->	
 	<script type="text/javascript" src="//use.typekit.net/vfd8tfq.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -109,7 +108,7 @@ DOGS
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="dog-b-clean.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -137,7 +136,7 @@ DOGS
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="breath-b-clean.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -163,7 +162,7 @@ DOGS
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="canine-pest-b-gone.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -235,7 +234,7 @@ CATS
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="odor-b-gone.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -262,7 +261,7 @@ CATS
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="cat-b-clean.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -288,7 +287,7 @@ CATS
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="feline-pest-b-gone.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -308,7 +307,7 @@ CATS
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="canine-joint-supplement.html"><div class="moreinfo">
+						<a href="feline-joint-supplement.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -354,7 +353,7 @@ HORSES
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="equine-fly-b-gone.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -381,7 +380,7 @@ HORSES
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="horse-b-clean.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -394,9 +393,12 @@ HORSES
 					<p class="subtitle">Equine Joint Supplement</p>
 					<p class="productdesc">It's so easy to give, and horses love it! Improves and maintains normal joint function and helps stop bleeding. Veterinarian approved!</p> 
 
+					<a href="equine-joint-supplement.html"><div class="moreinfo">
+							More Info
+						</div></a>
 
 <!-- PAYPAL BUTTONS -->				
-					<br><br>
+					<br><br><br>
 					<div class="ordergroup">							
 						<div class="ordername eqname">
 							1 Month Supply
@@ -485,7 +487,7 @@ LIVESTOCK
 						<a href="BUYNOWLINK"><div class="buynow">
 							Buy Now
 						</div></a>
-						<a href="ITEMINFOPAGE"><div class="moreinfo">
+						<a href="livestock-fly-b-gone.html"><div class="moreinfo">
 							More Info
 						</div></a>
 					</div>
@@ -499,36 +501,39 @@ LIVESTOCK
 					<p class="subtitle">Joint Supplement for Livestock Show Animals</p>
 					<p class="productdesc">Fix-A-Stride Joint Supplement has the right combination and the proper amounts of ingredients to ensure the soundness of your show animals. Veterinarian approved!</p> 
 
+					<a href="fix-a-stride.html"><div class="moreinfo">
+							More Info
+						</div></a>
 
 <!-- PAYPAL BUTTONS -->				
-									<br><br>
-									<div class="ordergroup">														<div class="ordername fixname">
-											3 Month Supply
-										</div> <!-- ordername -->
+					<br><br><br>
+					<div class="ordergroup">														<div class="ordername fixname">
+							3 Month Supply
+						</div> <!-- ordername -->
 
-										<div class="orderbutton">
-											<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-											<input type="hidden" name="cmd" value="_s-xclick">
-											<input type="hidden" name="hosted_button_id" value="Y8YYZ3Q7FHPPL">
-											<input type="image" src="http://s3.amazonaws.com/quietsight/buynow-purple110x40.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-											<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-											</form>
-										</div> <!-- orderbutton -->
-									</div> <!-- ordergroup -->
+						<div class="orderbutton">
+							<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="Y8YYZ3Q7FHPPL">
+							<input type="image" src="http://s3.amazonaws.com/quietsight/buynow-purple110x40.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+							<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+							</form>
+						</div> <!-- orderbutton -->
+					</div> <!-- ordergroup -->
 
-									<div class="ordergroup">														<div class="ordername fixname">
-											6 Month Supply
-										</div> <!-- ordername -->
+					<div class="ordergroup">														<div class="ordername fixname">
+							6 Month Supply
+						</div> <!-- ordername -->
 
-										<div class="orderbutton">
-											<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-											<input type="hidden" name="cmd" value="_s-xclick">
-											<input type="hidden" name="hosted_button_id" value="72824AE7QX5MS">
-											<input type="image" src="http://s3.amazonaws.com/quietsight/buynow-purple110x40.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-											<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-											</form>
-										</div> <!-- orderbutton -->
-									</div> <!-- ordergroup -->
+						<div class="orderbutton">
+							<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="72824AE7QX5MS">
+							<input type="image" src="http://s3.amazonaws.com/quietsight/buynow-purple110x40.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+							<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+							</form>
+						</div> <!-- orderbutton -->
+					</div> <!-- ordergroup -->
 
 
 <!-- PAYPAL BUTTONS -->			
