--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@ DOGS
 -->
 
 			<div class="contentblock">
-				
+
+
+<div class="madeinusa">
+	<img src="images/website/proudlymadeinusa.jpg">
+</div>				
 <div class="introvid">
 	<iframe width="420" height="315" src="//www.youtube.com/embed/KlZL2O8yaS8?rel=0" frameborder="0" allowfullscreen></iframe>
 </div> <!-- introvid -->
