touch up on More Info & Buy Now button

--- a/canine-joint-supplement.html
+++ b/canine-joint-supplement.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Canine Products | Sta-Sound</title>
+	<title>Canine Joint Supplement | Sta-Sound</title>
 <!-- Stylesheets -->	
 	<link href="style.css" rel="stylesheet" type="text/css">
 <!-- TypeKit -->	
@@ -69,7 +69,7 @@
 					</div><!--shopbuttons-->
 					
 					<div class="moreprice">
-						<div class="qty">
+						<div class="qty qty1">
 							30-Day Supply
 						</div>
 						<div class="price">
@@ -78,7 +78,7 @@
 					</div><!--moreprice-->
 					
 					<ul class="morelist">
-						<li>Veterinarian Approved!</li>
+						<li class="vet">Veterinarian Approved!</li>
 						<li>Real Beef</li>
 						<li>Stop Joint Pain</li>
 						<li>Reduce Inflammation</li>
