added working page to build FoxyCart links

--- a/products.html
+++ b/products.html
@@ -125,7 +125,7 @@ DOGS
 						<a href="dog-b-clean.html"><div class="moreinfo">
 							More Info
 						</div></a>
-					</div>
+					</div><!-- shopbuttons -->
 				</div><!--shopblock Dog-B-Clean-->
 
 <!-- BREATH-B-CLEAN -->
