editing Foxycart buttons

--- a/buttons.html
+++ b/buttons.html
@@ -1,3 +1,16 @@
+<DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Animal Products | Sta-Sound</title>
+<!-- Stylesheets -->	
+	<link href="style.css" rel="stylesheet" type="text/css">
+<!-- TypeKit -->	
+	<script type="text/javascript" src="//use.typekit.net/vfd8tfq.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+</head>
+<body>
+
 <!--           DOG-B-CLEAN           -->
 
 <div class="shopbuttons">
@@ -28,7 +41,7 @@
 			Buy Now
 		</a>
 
-	<a href="dog-b-clean.html"><div class="moreinfo">
+	<a href="breath-b-clean.html"><div class="moreinfo">
 		More Info
 	</div></a>
 </div><!-- shopbuttons -->
@@ -39,14 +52,14 @@
 <div class="shopbuttons">
 	<!-- Buy Now -->
 	<a href="https://stasound.foxycart.com/cart?
-		name=Pest-B-Gone-Canine9/
-		&price=9.95
+		name=Pest-B-Gone%20for%20Dogs
+		&price=12.95
 		&weight=1.2
-		&code=ss-09" class="buynow">
+		&code=ss-08" class="buynow">
 			Buy Now
 		</a>
 
-	<a href="dog-b-clean.html"><div class="moreinfo">
+	<a href="canine-pest-b-gone.html"><div class="moreinfo">
 		More Info
 	</div></a>
 </div><!-- shopbuttons -->
@@ -57,14 +70,169 @@
 <div class="shopbuttons">
 	<!-- Buy Now -->
 	<a href="https://stasound.foxycart.com/cart?
-		name=Dog-B-Clean
-		&price=9.95
-		&weight=1.2
-		&code=ss-09" class="buynow">
+		name=Canine%20Joint%20Supplement
+		&price=30.00
+		&weight=0.6
+		&code=ss-07" class="buynow">
 			Buy Now
 		</a>
 
-	<a href="dog-b-clean.html"><div class="moreinfo">
+	<a href="canine-joint-supplement.html"><div class="moreinfo">
 		More Info
 	</div></a>
 </div><!-- shopbuttons -->
+
+<!--
+
+cats
+
+-->
+
+<!--           ODOR-B-GONE           -->
+
+<div class="shopbuttons">
+	<!-- Buy Now -->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Odor-B-Gone
+		&price=9.95
+		&weight=0.9
+		&code=ss-14" class="buynow">
+			Buy Now
+		</a>
+
+	<a href="odor-b-gone.html"><div class="moreinfo">
+		More Info
+	</div></a>
+</div><!-- shopbuttons -->
+
+
+<!--           CAT-B-CLEAN           -->
+
+<div class="shopbuttons">
+	<!-- Buy Now -->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Cat-B-Clean
+		&price=9.95
+		&weight=1.2
+		&code=ss-13" class="buynow">
+			Buy Now
+		</a>
+
+	<a href="cat-b-clean.html"><div class="moreinfo">
+		More Info
+	</div></a>
+</div><!-- shopbuttons -->
+
+
+<!--           PEST-B-GONE CAT          -->
+
+<div class="shopbuttons">
+	<!-- Buy Now -->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Pest-B-Gone%20for%20Cats
+		&price=12.95
+		&weight=1.2
+		&code=ss-12" class="buynow">
+			Buy Now
+		</a>
+
+	<a href="feline-pest-b-gone.html"><div class="moreinfo">
+		More Info
+	</div></a>
+</div><!-- shopbuttons -->
+
+
+<!--           FELINE JOINT SUPPLEMENT           -->
+
+<div class="shopbuttons">
+	<!-- Buy Now -->
+	<a href="#" class="buynow">
+			Coming Soon
+		</a>
+
+	<a href="feline-joint-supplement.html"><div class="moreinfo">
+		More Info
+	</div></a>
+</div><!-- shopbuttons -->
+
+
+<!--
+
+horse
+
+-->
+
+<!--           FLY-B-GONE HORSE          -->
+
+<div class="shopbuttons">
+	<!-- Buy Now -->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Fly-B-Gone%20for%20Horses
+		&price=15.95
+		&weight=2.4
+		&code=ss-04" class="buynow">
+			Buy Now
+		</a>
+
+	<a href="equine-fly-b-gone.html"><div class="moreinfo">
+		More Info
+	</div></a>
+</div><!-- shopbuttons -->
+
+
+<!--           HORSE-B-CLEAN           -->
+
+<div class="shopbuttons">
+	<!-- Buy Now -->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Horse-B-Clean
+		&price=12.95
+		&weight=2.4
+		&code=ss-05" class="buynow">
+			Buy Now
+		</a>
+
+	<a href="horse-b-clean.html"><div class="moreinfo">
+		More Info
+	</div></a>
+</div><!-- shopbuttons -->
+
+
+<!--           EQUINE JOINT SUPPLEMENT          -->
+
+<div class="shopbuttons">
+	<!-- Buy Now 1mo-->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Equine%20Joint%20Supplement$20-$201-Month%20Supply
+		&price=35.00
+		&weight=2.4
+		&code=ss-01" class="buynow">
+			Buy Now
+		</a>
+	<!-- Buy Now 3mo-->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Equine%20Joint%20Supplement$20-$203-Month%20Supply
+		&price=95.00
+		&weight=6.7
+		&code=ss-03" class="buynow">
+			Buy Now
+		</a>
+	<!-- Buy Now 6mo-->
+	<a href="https://stasound.foxycart.com/cart?
+		name=Equine%20Joint%20Supplement$20-$206-Month%20Supply
+		&price=165.00
+		&weight=13.6
+		&code=ss-06" class="buynow">
+			Buy Now
+		</a>
+
+	<a href="equine-joint-supplement.html"><div class="moreinfo">
+		More Info
+	</div></a>
+</div><!-- shopbuttons -->
+
+
+<!--LIVERELOAD-->
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+</body>
+</html>
