--- a/buttons.html
+++ b/buttons.html
@@ -17,6 +17,15 @@
 	<!-- Buy Now -->
 	<a href="https://stasound.foxycart.com/cart?name=Dog-B-Clean||f4b928c8073c7d096205f21d90cfc87032618518dc9079d689ace65196831770&price=9.95||686fc95a9dd9f48244820e006fe3fa2b8faf7b64790439e3fae709f3b4ab1e37&weight=1.2||b2683465f70cb81727abfafbb0cd68bba4fd5df2068e3717f4631e9bf75279d7&code=ss-09||9f64f40aaf6cc2fa4be55fcfbaf1e54fb1c6d99db5b4d30afa380f0d30a05154" class="buynow">Buy Now</a>
 
+<!-- BUY NOW -->
+<form action="https://stasound.foxycart.com/cart" method="post" accept-charset="utf-8" class="buynow">
+<input type="hidden" name="name" value="Dog-B-Clean" />
+<input type="hidden" name="price" value="9.95" />
+<input type="hidden" name="code" value="ss-09" />
+<input type="hidden" name="weight" value="1.2" />
+<input type="submit" name="Buy Now" value="Buy Dog-B-Clean" class="submit" />
+</form>
+
 	<a href="dog-b-clean.html"><div class="moreinfo">
 		More Info
 	</div></a>
