adding product pages - joint supplements

--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Animal Products | Sta-Sound</title>
+	<title>Sta-Sound Animal Products</title>
 <!-- Stylesheets -->	
 	<link href="style.css" rel="stylesheet" type="text/css">
 <!-- TypeKit -->	
