editing more product pages

--- a/fix-a-stride.html
+++ b/fix-a-stride.html
@@ -5,10 +5,26 @@
 	<title>Fix-A-Stride Joint Supplement | Sta-Sound</title>
 <!-- Stylesheets -->	
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="960gs.css" type="text/css">
 <!-- TypeKit -->	
 	<script type="text/javascript" src="//use.typekit.net/vfd8tfq.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+<!--GoogleAnalytics-->	
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-36069127-1']);
+	  _gaq.push(['_setDomainName', 'stasound.com']);
+	  _gaq.push(['_setAllowLinker', true]);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+	</script>
+<!--GoogleAnalytics-->	
 
 </head>
 <body>
@@ -229,10 +245,10 @@
 
 			<div class="footeritem footerlinks">
 				<ul>
-					<a href="canine.html"><li>Dogs</li></a>
-					<a href="feline.html"><li>Cats</li></a>
-					<a href="equine.html"><li>Horses</li></a>
-					<a href="fix-a-stride.html"><li>Fix-A-Stride</li></a>
+					<a href="index.html#dogsection"><li>Dogs</li></a>
+					<a href="index.html#catsection"><li>Cats</li></a>
+					<a href="index.html#horsesection"><li>Horses</li></a>
+					<a href="index.html#livestocksection"><li>Livestock</li></a>
 				</ul>		
 			</div><!--footerlinks-->
 
