--- a/index.html
+++ b/index.html
@@ -48,20 +48,19 @@
 
 		</div><!--header-->
 
-<!-- NAV -->	<!-- NOTE MODIFIED TO JUMP TO POSITION -->
+<!-- NAV -->
 		<div class="nav">
 			<div class="navblock">
 				<p>
 					Superior Products for 
-					<a href="#dogsection" class="navlink">DOGS</a> |
-					<a href="#catsection" class="navlink">CATS</a> |
-					<a href="#horsesection" class="navlink">HORSES</a> |
-					<a href="#livestocksection" class="navlink">LIVESTOCK SHOW ANIMALS</a>
+					<a href="index.html#dogsection" class="navlink">DOGS</a> |
+					<a href="index.html#catsection" class="navlink">CATS</a> |
+					<a href="index.html#horsesection" class="navlink">HORSES</a> |
+					<a href="index.html#livestocksection" class="navlink">LIVESTOCK SHOW ANIMALS</a>
 				</p>
 			</div><!--navblock-->
 		</div>
-<!-- NAV -->	
-		
+<!-- NAV -->		
 
 <!-- MAINCONTENT -->
 
@@ -115,7 +114,7 @@ DOGS
 						<a href="https://stasound.foxycart.com/cart?name=Dog-B-Clean&price=9.95&h:code=ss-09" class="buynow">Buy Now</a>
 
 
-						<a href="dog-b-clean.html"><div class="moreinfo">
+						<a href="dog-b-clean.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -138,7 +137,7 @@ DOGS
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Breath-B-Clean||40b31e253995ce31e5f30f997fb4ddd9f62ca7e2d07a8004e95128cb06de91e5&price=9.95||0d12e4eabd1b85a84a7449bd87ac0819c65148d1d7de71ddc1a7ca670ea1b19f&weight=0.8||b035bdd6d4d4432f378a68bf8c486bc84551a8208d8f310045ac6d93d5cb7836&code=ss-10||2d1537a4d590b5abf9e7d6614829dfca2edc5d23283e0dc2a19ce9914b6b4866" class="buynow">Buy Now</a>
 
-						<a href="breath-b-clean.html"><div class="moreinfo">
+						<a href="breath-b-clean.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -162,7 +161,7 @@ DOGS
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Pest-B-Gone+for+Dogs||0de286a39e0851fbbab0361bfb568f31ad014bad097af050270a92903b0950d8&price=12.95||f68e9622c6c12f78bcb89da8bfc60b760f7c59d3076bbff8a1f71aa2ef93fa9d&weight=1.2||4902eab104ee4ee0e2b27e7bee9ff559eed7464a886d31e5fa46288b67aaa421&code=ss-08||9edaabea03a43a29fe89a4fd43e4ffa65a5cdd35005ff5342d6ea44aa7707a4b" class="buynow">Buy Now</a>
 
-						<a href="canine-pest-b-gone.html"><div class="moreinfo">
+						<a href="canine-pest-b-gone.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -225,7 +224,7 @@ CATS
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Odor-B-Gone||31ca5d1decf2702368f70fe0db5ec687fbbacf4175305be40d5e4d887b161ba2&price=9.95||617e1a00a9a947aca2039ee2a756eed3a6960583e223138362e3277e0840f903&weight=0.9||da59c71bc3c8f1fd2a0a7621ae55124650434aa62649af0846a6af55d7c163e7&code=ss-14||cd16e7a926d4f2bbacd653fc671f51866a91f6f0f76c45496b481c5406a4c5bc" class="buynow">Buy Now</a>
 
-						<a href="odor-b-gone.html"><div class="moreinfo">
+						<a href="odor-b-gone.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -246,7 +245,7 @@ CATS
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Cat-B-Clean||ff0ccc9b661fda46e2860efe40bc9fcc12be2e0e5505ddb0389950b499cfe6ea&price=9.95||b1a6fa9991727345f2c376b7b02d91616b1fb72c3fc5860f8bd7b6ab36cb6999&weight=1.2||f86807e5225ed0447503332f93ba64e46b832bdd95bead5b92c3d1b91732526b&code=ss-13||79ac054b3e03d2652bdcac4960404b020a9349c3bec4e3e1bd97edc9141ede0e" class="buynow">Buy Now</a>
 
-						<a href="cat-b-clean.html"><div class="moreinfo">
+						<a href="cat-b-clean.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -269,7 +268,7 @@ CATS
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Pest-B-Gone+for+Cats||3297cf463efd7596174094a554f2ba0c51129f2de4d6e3e124176db0d182bfe1&price=12.95||f253b611a641d1d0df96b8d0d930f7726decf3a97fa472585b6b270e5b788cfd&weight=1.2||f5a565d8ceccf96a49cd07a6af039d1ebe2cb170fde5f8438e09be4908d4b012&code=ss-12||53f44fbc1bd7def27f34a953622770c73de8955fedb0f55ed25472b8796a2e4d" class="buynow">Buy Now</a>
 
-						<a href="feline-pest-b-gone.html"><div class="moreinfo">
+						<a href="feline-pest-b-gone.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -290,7 +289,7 @@ CATS
 						<a href="#" class="buynow">Coming n
 							</a>
 
-						<a href="feline-joint-supplement.html"><div class="moreinfo">
+						<a href="feline-joint-supplement.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -331,7 +330,7 @@ HORSES
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Fly-B-Gone+for+Horses||9dca2eedf4708199e1d5d75a98668b34ff29ac32a86c66a0acc3301be1d9fe91&price=15.95||cdb6f2e9c5930c268df493dff81547c721ded6aa9551a00fa96c725d6be60df2&weight=2.4||0a4a4c935b6b5341315e4ab258323722f18f371ef4102c9dc5f9586916f76189&code=ss-04||b3055adea1184195d523ef0b939036cf0d9f697b56711b009fcff27135d7902e" class="buynow">Buy Now</a>
 
-						<a href="equine-fly-b-gone.html"><div class="moreinfo">
+						<a href="equine-fly-b-gone.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -352,7 +351,7 @@ HORSES
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Horse-B-Clean||a3495f05fae7dab13cb9ccc3b521a7fd2200c789b8bcbab0941f2dcd55ba8738&price=12.95||87bfec01b5411d06efe22b7a65308206bbc35c82542852fbf7868aac8e8de0eb&weight=2.4||5b3052a572b6f093855a139ff5011db109c42e16e687c92f6ab4782ed5786885&code=ss-05||2c587be38d9572de2727572c35be2200778c36c26d9a9cb9fb48f2f1a1120376" class="buynow">Buy Now</a>
 
-						<a href="horse-b-clean.html"><div class="moreinfo">
+						<a href="horse-b-clean.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -442,7 +441,7 @@ LIVESTOCK
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Fly-B-Gone+for+Livestock||6b257e29f5f00c8c82949232f6776b01b897bb1bd0bcf8ed53cf2c3af1bc0c4c&price=15.95||9fa198c7f9617707595c14dd0e0ab0d1bcb1badff4300eb24af10dcf7a162710&weight=2.4||3a80d05452e14fc933df1b7902105aa4c3ec3858359a7f52d05766c361374218&code=fa-07||21693a2089e2acf254026c332f6f0bcc08fa8ceb16fc7a07cbac0c499ba96d4a" class="buynow">Buy Now</a>
 
-						<a href="livestock-fly-b-gone.html"><div class="moreinfo">
+						<a href="livestock-fly-b-gone.html"><div class="moreinfo more1">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -534,10 +533,10 @@ LIVESTOCK
 
 			<div class="footeritem footerlinks">
 				<ul>
-					<a href="canine.html"><li>Dogs</li></a>
-					<a href="feline.html"><li>Cats</li></a>
-					<a href="equine.html"><li>Horses</li></a>
-					<a href="fix-a-stride.html"><li>Fix-A-Stride</li></a>
+					<a href="index.html#dogsection"><li>Dogs</li></a>
+					<a href="index.html#catsection"><li>Cats</li></a>
+					<a href="index.html#horsesection"><li>Horses</li></a>
+					<a href="index.html#livestocksection"><li>Livestock</li></a>
 				</ul>		
 			</div><!--footerlinks-->
 
