added several more product pages

--- a/canine-joint-supplement.html
+++ b/canine-joint-supplement.html
@@ -62,7 +62,7 @@
 			<div class="contentblock">
 				<div class="moreblock">	
 					<h1 class="pagetitle">Sta-Sound Canine Joint Supplement</h1>
-					<div class="moreimg">
+					<div class="moreimg moreimgbucket img2">
 						<img src="images/products/Canine-Joint-Supplement.png" class="product moreproduct">
 						<img src="images/animals/sqdog-shaggy-best.jpg" class="animalsq">
 					</div><!--moreimg-->
@@ -170,7 +170,9 @@
 						<p class="ingredients">
 							Soybate, Salt, Liquid Smoke, Yucca Powder, Beef, Beef Heart, Beef Liver, Vitamin K and Stabilized Rice Bran. A good source of Vitamin A, Vitamin B, Vitamin E and Beta Carotene.
 						</p>
-					</div><!--ingredientblock-->	
+					</div><!--ingredientblock-->
+
+					<div class="madein"><img src="images/products/madeinusa.png"></div>	
 					
 <!--CLEAR--><div class="clear"></div>					
 					
